--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html {
 }
 
 header,
+.header,
 footer {
     background: rgb(9,64,103);
     background: linear-gradient(90deg, rgba(9,64,103,1) 6%, rgba(144,180,206,1) 100%); 
